--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,13 @@ development:
   <<: *default
   database: access_fuel_development
 
+production:
+  adapter: postgresql
+  database: accessfuel_production
+  pool: 5
+
+
+
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
